Updated Adam's bio and fixed FAQ link invisibility

--- a/Website/faq/style.css
+++ b/Website/faq/style.css
@@ -23,7 +23,7 @@
     font-size: 14px;
 }
 
-a {
+.copyright a {
     color: white;
     text-decoration: none;
 }
